fix: prevent subpixel line joint overlaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@ body {
 }
 
 .with-connector:after {
-  @apply absolute left-full w-[20px] border-2 border-l-0 border-[#e6e6e6] content-['_'];
+  @apply absolute left-full w-5 border-2 border-l-0 border-[#e6e6e6] content-['_'];
 }
 
 .with-connector:nth-child(odd):after {
@@ -35,7 +35,7 @@ body {
   }
 
   &:after {
-    @apply h-[60px];
+    @apply h-[61px];
   }
 }
 
@@ -49,7 +49,7 @@ body {
   }
 
   &:after {
-    @apply h-[136px];
+    @apply h-[137px];
   }
 }
 
@@ -63,7 +63,7 @@ body {
   }
 
   &:after {
-    @apply h-[272px];
+    @apply h-[273px];
   }
 }
 
@@ -77,7 +77,7 @@ body {
   }
 
   &:after {
-    @apply h-[544px];
+    @apply h-[545px];
   }
 }
 
@@ -91,7 +91,7 @@ body {
   }
 
   &:after {
-    @apply h-[1088px];
+    @apply h-[1089px];
   }
 }
 
@@ -110,5 +110,5 @@ body {
 }
 
 .round + .round .with-connector:before {
-  @apply absolute right-full top-[calc(50%_-_1px)] w-[22px] border-t-2 border-[#e6e6e6] content-['_'];
+  @apply absolute right-full top-[calc(50%_-_1px)] w-5 border-t-2 border-[#e6e6e6] content-['_'];
 }
